components/Products.module.scss
@use '@/app/base';

.content {
	display: flex;
	flex-direction: column;
	align-items: center;

	h3 {
		margin-bottom: 4rem;
	}
}

.products {
	display: grid;
	grid-template-columns: repeat(12, 1fr);
	grid-gap: 2rem;
	width: 100%;
}

.product {
	grid-column: span 3;
	display: flex;
	flex-direction: column;
	gap: 1.5rem;

	a {
		width: 100%;
	}

	h4,
	h5 {
		text-align: center;
	}
}

.image {
	width: 100%;
	aspect-ratio: 1 / 1;
	position: relative;
	overflow: hidden;
}

.hoverImage {
	opacity: 0;
}

.image:hover {
	img {
		transform: scale(110%);
		transition: 0.3s ease-in;
	}

	.hoverImage {
		opacity: 1;
	}
}

.price {
	position: absolute;
	bottom: 0;
	left: 0;
	background-color: white;
	padding: 0.2rem 0.5rem;
}

.typeIcons {
	display: flex;
	justify-content: center;
	gap: 0.5rem;
}

.typeIcon {
	position: relative;
	width: 1.5rem;
	aspect-ratio: 1 /1;
}

@media screen and (max-width: 1024px) {
	.categorie {
		grid-column: span 6;
	}
}

@media screen and (max-width: 768px) {
	.categorie {
		grid-column: span 12;
		max-width: 90vw;
	}
}

